laravel rotte paramtriche e controller

--- a/laravel/primo_progetto/public/style.css
+++ b/laravel/primo_progetto/public/style.css
@@ -12,3 +12,22 @@
     text-align: center;
 
 }
+
+/* pagina docenti */
+
+.foto{
+    height: 250px;
+    width: 15rem;
+}
+
+/* pagina chi siamo */
+
+.logo{
+      height: 250px;
+    width: 15rem;  
+}
+
+.logo2{
+    height: 250px;
+    width: 15rem;   
+}
